<resources>
    <string name="app_name">晓礼</string>

    <string-array name="set_avatar">
        <item>拍照换头像</item>
        <item>从相册选择新头像</item>
        <item>取消</item>
    </string-array>

    <string name="login_title">登录账号</string>
    <string name="cancel">取消</string>
    <string name="mobile_phone">手机号</string>
    <string name="password">密码</string>
    <string name="input_login_mobile_phone">请输入所注册的手机号</string>
    <string name="input_login_password">请输入6–12位密码</string>
    <string name="forget_password"><u>忘记密码？</u></string>
    <string name="login">登录</string>
    <string name="register">注册</string>
    <string name="go_home">随意看看</string>
    <string name="get_auth_code">获取验证码</string>
    <string name="auth_code">验证码</string>
    <string name="input_register_mobile_phone">请输入手机号</string>
    <string name="input_confirm_password">请再次输入密码</string>
    <string name="input_auth_code">请输入6位短信密码</string>
    <string name="confirm_password">确认密码</string>
    <string name="register_title">账号注册</string>
    <string name="me">我</string>
    <string name="forget_password_title">忘记密码</string>
    <string name="confirm">确定</string>
    <string name="grade_record">打分记录</string>
    <string name="impression_record">印象记录</string>
    <string name="my_favorite">我的收藏</string>
    <string name="my_story">我的故事</string>
    <string name="setting">设置</string>
    <string name="security_setting">安全设置</string>
    <string name="notice_setting">通知设置</string>
    <string name="log_out">退出登录</string>
    <string name="change_mobile">更改手机设置</string>
    <string name="bind_email">绑定邮箱</string>
    <string name="change_password">修改密码</string>
    <string name="bind_wei_bo">绑定微博</string>
    <string name="bind_wei_xin">绑定微信</string>
    <string name="personal_info_title">个人信息</string>
    <string name="avatar">头像</string>
    <string name="nickname">昵称</string>
    <string name="birthday">生日</string>
    <string name="age">年龄</string>
    <string name="constellation">星座</string>
    <string name="sex">性别</string>
    <string name="shipping_address">收货地址</string>
    <string name="personal_label">个人标签</string>
    <string name="edit_personal_label">编辑标签</string>
    <string name="submit">提交</string>
    <string name="complete">完成</string>
    <string name="gift_record">情礼记录</string>
    <string name="relative">关系网络图</string>
    <string name="contacts">通讯录整理</string>
    <string name="input_comment">写下你对TA的评论</string>
    <string name="impression">印象</string>
    <string name="grade">打分</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="tv_gralley">相册</string>
    <string name="tv_discover_qltx">情礼提醒</string>
    <string name="tv_discover_msg_template">短信模板</string>
    <string name="tv_discover_scan">扫一扫</string>
    <string name="tv_discover_mycard">我的卡券</string>
    <string name="tv_discover_ghht">关怀话题</string>
    <string name="load">加载中…</string>
</resources>
