<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical">

    <include layout="@layout/action_bar"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginTop="30dp"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:weightSum="1">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.15"
            android:text="@string/mobile_phone"
            android:textSize="16sp"/>

        <EditText
            android:id="@id/mobilePhone"
            style="@style/textCursorDrawable"
            android:background="@drawable/shape_round_rect"
            android:hint="@string/input_login_mobile_phone"
            android:inputType="phone"
            android:maxLength="11"
            android:padding="5dp"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginTop="20dp"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:weightSum="1">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.15"
            android:text="@string/password"
            android:textSize="16sp"/>

        <EditText
            android:id="@id/password"
            style="@style/textCursorDrawable"
            android:background="@drawable/shape_round_rect"
            android:hint="@string/input_login_password"
            android:inputType="textPassword"
            android:maxLength="12"
            android:padding="5dp"
            />
    </LinearLayout>

    <TextView
        android:id="@id/forgetPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="55dp"
        android:padding="10dp"
        android:text="@string/forget_password"
        android:textColor="@color/forget_password_color"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:gravity="center_horizontal"
        android:orientation="horizontal"
        android:weightSum="1">

        <TextView
            android:id="@id/login"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginRight="10dp"
            android:layout_weight="0.25"
            android:background="@drawable/shape_login_button"
            android:gravity="center_horizontal"
            android:padding="8dp"
            android:text="@string/login"
            android:textColor="@color/white"/>

        <TextView
            android:id="@id/register"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_weight="0.25"
            android:background="@drawable/shape_register_button"
            android:gravity="center_horizontal"
            android:padding="8dp"
            android:text="@string/register"
            android:textColor="@color/white"/>
    </LinearLayout>

    <TextView
        android:id="@id/goHome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="30dp"
        android:background="@drawable/shape_round_rect"
        android:paddingBottom="5dp"
        android:paddingLeft="45dp"
        android:paddingRight="45dp"
        android:paddingTop="5dp"
        android:text="@string/go_home"/>
</LinearLayout>