<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical">

    <include layout="@layout/action_bar"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginTop="30dp"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:weightSum="1">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.2"
            android:text="@string/mobile_phone"
            android:textSize="16sp"/>

        <EditText
            android:id="@id/mobilePhone"
            style="@style/textCursorDrawable"
            android:background="@drawable/shape_round_rect"
            android:hint="@string/input_register_mobile_phone"
            android:inputType="phone"
            android:maxLength="11"
            android:padding="5dp"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:weightSum="1">

        <Space
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="0.28"/>

        <TextView
            android:id="@id/verifiedMobilePhone"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_weight="0.72"
            android:textColor="@color/forget_password_color"
            android:textSize="12sp"/>

        <TextView
            android:id="@id/getAuthCode"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:background="@drawable/shape_red_color_button"
            android:paddingBottom="6dp"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:paddingTop="6dp"
            android:text="@string/get_auth_code"
            android:textColor="@color/white"
            android:textSize="14sp"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:weightSum="1">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.2"
            android:text="@string/auth_code"
            android:textSize="16sp"/>

        <EditText
            android:id="@id/authCode"
            style="@style/textCursorDrawable"
            android:background="@drawable/shape_round_rect"
            android:hint="@string/input_auth_code"
            android:inputType="number"
            android:maxLength="6"
            android:padding="5dp"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginTop="20dp"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:weightSum="1">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.2"
            android:text="@string/password"
            android:textSize="16sp"/>

        <EditText
            android:id="@id/password"
            style="@style/textCursorDrawable"
            android:background="@drawable/shape_round_rect"
            android:hint="@string/input_login_password"
            android:inputType="textPassword"
            android:maxLength="12"
            android:padding="5dp"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginTop="20dp"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:weightSum="1">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.2"
            android:text="@string/confirm_password"
            android:textSize="16sp"/>

        <EditText
            android:id="@id/confirmPassword"
            style="@style/textCursorDrawable"
            android:background="@drawable/shape_round_rect"
            android:hint="@string/input_confirm_password"
            android:inputType="textPassword"
            android:maxLength="12"
            android:padding="5dp"/>
    </LinearLayout>

    <TextView
        android:id="@id/confirm"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="25dp"
        android:background="@drawable/shape_red_color_button"
        android:gravity="center_horizontal"
        android:paddingBottom="10dp"
        android:paddingTop="10dp"
        android:text="@string/confirm"
        android:textColor="@color/white"/>
</LinearLayout>